syntax = "proto3";

option csharp_namespace = "secondgRPCService";

package mockqhd;

// The greeting service definition.
service QHDmocker {
  // Sends a greeting
  rpc CallQIL (QilRequest) returns (QilReply);
}

// The request message containing the user's name.
message QilRequest {
  int64 qilID = 1;
  int64 qilVersion = 2;
}

// The response message containing the greetings.
message QilReply {
  string data = 1;
}
