syntax = "proto3";
package qh_data_service;

service QHData {
    rpc CallQil(QILRequest) returns (QILResponse) {};
}

message QILRequest {
	int64 qilID = 1;
	int64 qilVersion = 2;
}

message QILResponse {
	string data = 1;
}